--- a/src/app/page.module.css
+++ b/src/app/page.module.css
@@ -1,230 +1,435 @@
-.main {
-  display: flex;
-  flex-direction: column;
-  justify-content: space-between;
-  align-items: center;
-  padding: 6rem;
-  min-height: 100vh;
+/* Header Style Start Here*/
+
+.header {
+	background-color: #fff;
+}
+
+header .wrapper {
+	max-width: 1130px;
+	width: 100%;
+	margin: 0 auto;
+	padding: 36.5px 10px;
+}
+
+.nav {
+	display: flex;
+	justify-content: space-between;
+}
+
+.logo {
+	width: 145px;
+	height: 40px;
+}
+
+.logo_svg {
+	display: flex;
+}
+
+.menu {
+	max-width: 427px;
+	width: 100%;
+	display: flex;
+	justify-content: space-between;
+	align-items: center;
+}
+
+.menu_link.active {
+	font-size: 14px;
+	font-weight: 700;
+	line-height: 16.8px;
+	text-align: left;
+	color: #222831;
+}
+
+.menu_link {
+	font-size: 14px;
+	font-weight: 700;
+	line-height: 16.8px;
+	text-align: left;
+	color: rgba(25, 24, 37, 0.5);
+}
+
+.account_divider {
+	max-width: 221px;
+	width: 100%;
+	display: flex;
+	align-items: center;
+	justify-content: space-between;
+	gap: 32px;
+}
+
+.signUp_buttons {
+	width: 116px;
+	height: 49px;
+	border-radius: 100px;
+	display: flex;
+	align-items: center;
+	justify-content: center;
+	background-color: #5d50c6;
+}
+
+.login_btn_link {
+	font-size: 14px;
+	font-weight: 700;
+	line-height: 16.8px;
+	color: #222831;
+}
+
+.signUp_btn_link {
+	font-size: 14px;
+	font-weight: 700;
+	line-height: 16.8px;
+	color: #eeeeee;
+}
+
+/* Banner style start Here*/
+
+.banner_wrapper {
+	max-width: 1219px;
+	width: 100%;
+	margin: 0 auto;
+	padding: 64px 10px 64px 89px;
+	display: flex;
+	justify-content: space-between;
+}
+
+.banner_left {
+	max-width: 427px;
+	width: 100%;
+}
+
+.banner_chip {
+	display: flex;
+	align-items: center;
+	justify-content: center;
+	gap: 16px;
+	width: 225px;
+	height: 56px;
+	background: #ffffff;
+	box-shadow: 0px 548px 219px rgba(0, 0, 0, 0.01),
+		0px 308px 185px rgba(0, 0, 0, 0.04), 0px 137px 137px rgba(0, 0, 0, 0.06),
+		0px 34px 75px rgba(0, 0, 0, 0.07), 0px 0px 0px rgba(0, 0, 0, 0.07);
+	border-radius: 100px;
+	margin-bottom: 43px;
+}
+
+.banner_chip_text {
+	font-style: normal;
+	font-weight: 700;
+	font-size: 14px;
+	line-height: 120%;
+	color: #f85e9f;
+}
+
+.banner_chip_icon {
+	display: flex;
+	width: 24px;
+	height: 24px;
+}
+
+.banner_text_content {
+	margin-bottom: 43px;
+}
+
+.heading {
+	font-style: normal;
+	font-weight: 700;
+	font-size: 69px;
+	line-height: 120%;
+	color: #000000;
+}
+
+.banner_subHeading {
+	font-family: "Inter";
+	font-weight: 400;
+	font-size: 18px;
+	line-height: 160%;
+	color: rgba(25, 24, 37, 0.5);
+	margin-bottom: 43px;
+}
+
+.pink_text {
+	color: #f85e9f;
+}
+
+.banner_buttons {
+	max-width: 337px;
+	width: 100%;
+	display: flex;
+	align-items: center;
+	justify-content: space-between;
+}
+
+.get_started {
+	background: #5d50c6;
+	box-shadow: 0px 81px 32px rgba(0, 0, 0, 0.01),
+		0px 45px 27px rgba(0, 0, 0, 0.05), 0px 20px 20px rgba(0, 0, 0, 0.09),
+		0px 5px 11px rgba(0, 0, 0, 0.1), 0px 0px 0px rgba(0, 0, 0, 0.1);
+	border-radius: 100px;
+	display: flex;
+	align-items: center;
+	justify-content: center;
+	max-width: 140px;
+	height: 49px;
+	width: 100%;
+}
+
+.get_started_text {
+	font-weight: 700;
+	font-size: 14px;
+	line-height: 120%;
+	color: #eeeeee;
+}
+
+.demo_button {
+	align-items: center;
+	background: #ffffff;
+	border: 1px solid #eeeeee;
+	border-radius: 100px;
+	display: flex;
+	max-width: 181px;
+	width: 100%;
+	height: 56px;
+	justify-content: center;
+	gap: 8px;
+}
+
+.video_icon {
+	display: flex;
+	width: 24px;
+	height: 24px;
+}
+
+.demo_button_text {
+	font-weight: 700;
+	font-size: 14px;
+	line-height: 120%;
+	color: #222831;
+}
+
+.banner_right {
+	max-width: 772px;
+	width: 100%;
 }
 
 .description {
-  display: inherit;
-  justify-content: inherit;
-  align-items: inherit;
-  font-size: 0.85rem;
-  max-width: var(--max-width);
-  width: 100%;
-  z-index: 2;
-  font-family: var(--font-mono);
+	display: inherit;
+	justify-content: inherit;
+	align-items: inherit;
+	font-size: 0.85rem;
+	max-width: var(--max-width);
+	width: 100%;
+	z-index: 2;
+	font-family: var(--font-mono);
 }
 
 .description a {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  gap: 0.5rem;
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	gap: 0.5rem;
 }
 
 .description p {
-  position: relative;
-  margin: 0;
-  padding: 1rem;
-  background-color: rgba(var(--callout-rgb), 0.5);
-  border: 1px solid rgba(var(--callout-border-rgb), 0.3);
-  border-radius: var(--border-radius);
+	position: relative;
+	margin: 0;
+	padding: 1rem;
+	background-color: rgba(var(--callout-rgb), 0.5);
+	border: 1px solid rgba(var(--callout-border-rgb), 0.3);
+	border-radius: var(--border-radius);
 }
 
 .code {
-  font-weight: 700;
-  font-family: var(--font-mono);
+	font-weight: 700;
+	font-family: var(--font-mono);
 }
 
 .grid {
-  display: grid;
-  grid-template-columns: repeat(4, minmax(25%, auto));
-  max-width: 100%;
-  width: var(--max-width);
+	display: grid;
+	grid-template-columns: repeat(4, minmax(25%, auto));
+	max-width: 100%;
+	width: var(--max-width);
 }
 
 .card {
-  padding: 1rem 1.2rem;
-  border-radius: var(--border-radius);
-  background: rgba(var(--card-rgb), 0);
-  border: 1px solid rgba(var(--card-border-rgb), 0);
-  transition: background 200ms, border 200ms;
+	padding: 1rem 1.2rem;
+	border-radius: var(--border-radius);
+	background: rgba(var(--card-rgb), 0);
+	border: 1px solid rgba(var(--card-border-rgb), 0);
+	transition: background 200ms, border 200ms;
 }
 
 .card span {
-  display: inline-block;
-  transition: transform 200ms;
+	display: inline-block;
+	transition: transform 200ms;
 }
 
 .card h2 {
-  font-weight: 600;
-  margin-bottom: 0.7rem;
+	font-weight: 600;
+	margin-bottom: 0.7rem;
 }
 
 .card p {
-  margin: 0;
-  opacity: 0.6;
-  font-size: 0.9rem;
-  line-height: 1.5;
-  max-width: 30ch;
-  text-wrap: balance;
+	margin: 0;
+	opacity: 0.6;
+	font-size: 0.9rem;
+	line-height: 1.5;
+	max-width: 30ch;
+	text-wrap: balance;
 }
 
 .center {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  position: relative;
-  padding: 4rem 0;
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	position: relative;
+	padding: 4rem 0;
 }
 
 .center::before {
-  background: var(--secondary-glow);
-  border-radius: 50%;
-  width: 480px;
-  height: 360px;
-  margin-left: -400px;
+	background: var(--secondary-glow);
+	border-radius: 50%;
+	width: 480px;
+	height: 360px;
+	margin-left: -400px;
 }
 
 .center::after {
-  background: var(--primary-glow);
-  width: 240px;
-  height: 180px;
-  z-index: -1;
+	background: var(--primary-glow);
+	width: 240px;
+	height: 180px;
+	z-index: -1;
 }
 
 .center::before,
 .center::after {
-  content: "";
-  left: 50%;
-  position: absolute;
-  filter: blur(45px);
-  transform: translateZ(0);
+	content: "";
+	left: 50%;
+	position: absolute;
+	filter: blur(45px);
+	transform: translateZ(0);
 }
 
 .logo {
-  position: relative;
+	position: relative;
 }
 /* Enable hover only on non-touch devices */
 @media (hover: hover) and (pointer: fine) {
-  .card:hover {
-    background: rgba(var(--card-rgb), 0.1);
-    border: 1px solid rgba(var(--card-border-rgb), 0.15);
-  }
+	.card:hover {
+		background: rgba(var(--card-rgb), 0.1);
+		border: 1px solid rgba(var(--card-border-rgb), 0.15);
+	}
 
-  .card:hover span {
-    transform: translateX(4px);
-  }
+	.card:hover span {
+		transform: translateX(4px);
+	}
 }
 
 @media (prefers-reduced-motion) {
-  .card:hover span {
-    transform: none;
-  }
+	.card:hover span {
+		transform: none;
+	}
 }
 
 /* Mobile */
 @media (max-width: 700px) {
-  .content {
-    padding: 4rem;
-  }
+	.content {
+		padding: 4rem;
+	}
 
-  .grid {
-    grid-template-columns: 1fr;
-    margin-bottom: 120px;
-    max-width: 320px;
-    text-align: center;
-  }
+	.grid {
+		grid-template-columns: 1fr;
+		margin-bottom: 120px;
+		max-width: 320px;
+		text-align: center;
+	}
 
-  .card {
-    padding: 1rem 2.5rem;
-  }
+	.card {
+		padding: 1rem 2.5rem;
+	}
 
-  .card h2 {
-    margin-bottom: 0.5rem;
-  }
+	.card h2 {
+		margin-bottom: 0.5rem;
+	}
 
-  .center {
-    padding: 8rem 0 6rem;
-  }
+	.center {
+		padding: 8rem 0 6rem;
+	}
 
-  .center::before {
-    transform: none;
-    height: 300px;
-  }
+	.center::before {
+		transform: none;
+		height: 300px;
+	}
 
-  .description {
-    font-size: 0.8rem;
-  }
+	.description {
+		font-size: 0.8rem;
+	}
 
-  .description a {
-    padding: 1rem;
-  }
+	.description a {
+		padding: 1rem;
+	}
 
-  .description p,
-  .description div {
-    display: flex;
-    justify-content: center;
-    position: fixed;
-    width: 100%;
-  }
+	.description p,
+	.description div {
+		display: flex;
+		justify-content: center;
+		position: fixed;
+		width: 100%;
+	}
 
-  .description p {
-    align-items: center;
-    inset: 0 0 auto;
-    padding: 2rem 1rem 1.4rem;
-    border-radius: 0;
-    border: none;
-    border-bottom: 1px solid rgba(var(--callout-border-rgb), 0.25);
-    background: linear-gradient(
-      to bottom,
-      rgba(var(--background-start-rgb), 1),
-      rgba(var(--callout-rgb), 0.5)
-    );
-    background-clip: padding-box;
-    backdrop-filter: blur(24px);
-  }
+	.description p {
+		align-items: center;
+		inset: 0 0 auto;
+		padding: 2rem 1rem 1.4rem;
+		border-radius: 0;
+		border: none;
+		border-bottom: 1px solid rgba(var(--callout-border-rgb), 0.25);
+		background: linear-gradient(
+			to bottom,
+			rgba(var(--background-start-rgb), 1),
+			rgba(var(--callout-rgb), 0.5)
+		);
+		background-clip: padding-box;
+		backdrop-filter: blur(24px);
+	}
 
-  .description div {
-    align-items: flex-end;
-    pointer-events: none;
-    inset: auto 0 0;
-    padding: 2rem;
-    height: 200px;
-    background: linear-gradient(
-      to bottom,
-      transparent 0%,
-      rgb(var(--background-end-rgb)) 40%
-    );
-    z-index: 1;
-  }
+	.description div {
+		align-items: flex-end;
+		pointer-events: none;
+		inset: auto 0 0;
+		padding: 2rem;
+		height: 200px;
+		background: linear-gradient(
+			to bottom,
+			transparent 0%,
+			rgb(var(--background-end-rgb)) 40%
+		);
+		z-index: 1;
+	}
 }
 
 /* Tablet and Smaller Desktop */
 @media (min-width: 701px) and (max-width: 1120px) {
-  .grid {
-    grid-template-columns: repeat(2, 50%);
-  }
+	.grid {
+		grid-template-columns: repeat(2, 50%);
+	}
 }
 
 @media (prefers-color-scheme: dark) {
-  .vercelLogo {
-    filter: invert(1);
-  }
+	.vercelLogo {
+		filter: invert(1);
+	}
 
-  .logo {
-    filter: invert(1) drop-shadow(0 0 0.3rem #ffffff70);
-  }
+	.logo {
+		filter: invert(1) drop-shadow(0 0 0.3rem #ffffff70);
+	}
 }
 
 @keyframes rotate {
-  from {
-    transform: rotate(360deg);
-  }
-  to {
-    transform: rotate(0deg);
-  }
+	from {
+		transform: rotate(360deg);
+	}
+	to {
+		transform: rotate(0deg);
+	}
 }
