--- a/src/app/page.module.css
+++ b/src/app/page.module.css
@@ -88,7 +88,7 @@ header .wrapper {
 	max-width: 1219px;
 	width: 100%;
 	margin: 0 auto;
-	padding: 64px 10px 64px 89px;
+	padding: 64px 10px 0px 89px;
 	display: flex;
 	justify-content: space-between;
 }
@@ -210,6 +210,198 @@ header .wrapper {
 .banner_right {
 	max-width: 772px;
 	width: 100%;
+	height: 713px;
+}
+
+/* clients list style start here */
+
+.clients {
+	margin-bottom: 64px;
+	margin-top: -26px;
+}
+
+.client_wrapper {
+	max-width: 1130px;
+	width: 100%;
+	margin: 0 auto;
+	padding: 64px 10px;
+}
+
+.client_list {
+	display: flex;
+	align-items: center;
+	justify-content: space-between;
+}
+
+/* Services Style Start Here */
+
+.service_wrapper {
+	max-width: 1130px;
+	width: 100%;
+	display: flex;
+	padding: 10px;
+	overflow: hidden;
+	align-items: center;
+	margin: 0 auto;
+}
+
+.services_left {
+	max-width: 444px;
+	width: 100%;
+}
+
+.services_subtitle {
+	font-weight: 700;
+	font-size: 23px;
+	line-height: 120%;
+	letter-spacing: 0.2em;
+	text-transform: uppercase;
+	color: #f85e9f;
+	margin-bottom: 16px;
+}
+
+.services_title {
+	font-weight: 700;
+	font-size: 44px;
+	line-height: 120%;
+	color: #191825;
+}
+
+.services_slider {
+	display: flex;
+	align-items: center;
+	gap: 21px;
+	max-width: 1092px;
+	width: 100%;
+}
+
+.services_card {
+	width: 350px;
+	height: 443px;
+	display: flex;
+	flex-direction: column;
+	justify-content: center;
+	align-items: center;
+	background: #ffffff;
+	box-shadow: 0px 41px 89px rgba(0, 0, 0, 0.1), 0px 0px 0px rgba(0, 0, 0, 0.1);
+	border-radius: 32px;
+}
+
+.services_icon {
+	max-width: 64px;
+	width: 100%;
+	margin: 0 auto 64px;
+}
+
+.card_title {
+	font-weight: 700;
+	font-size: 28px;
+	line-height: 120%;
+	text-align: center;
+	color: #191825;
+	margin-bottom: 32px;
+}
+
+.card_subtitle {
+	font-family: "Inter", Arial, Helvetica, sans-serif;
+	font-style: normal;
+	font-weight: 400;
+	font-size: 18px;
+	line-height: 160%;
+	text-align: center;
+	color: rgba(25, 24, 37, 0.5);
+	max-width: 222px;
+	width: 100%;
+	margin: 0 auto;
+}
+
+/*services style end here*/
+
+/* Travel point style start here */
+
+.travel_point_wrapper {
+	max-width: 1276px;
+	width: 100%;
+	display: flex;
+	align-items: center;
+	gap: 42px;
+	margin: 109px 0;
+}
+
+.travel_point_left {
+	max-width: 789px;
+	width: 100%;
+}
+
+.travel_point_right {
+	max-width: 445px;
+	width: 100%;
+	display: flex;
+	flex-direction: column;
+}
+
+.travel_point_subtitle {
+	font-weight: 700;
+	font-size: 23px;
+	line-height: 120%;
+	letter-spacing: 0.2em;
+	text-transform: uppercase;
+	color: #f85e9f;
+	margin-bottom: 16px;
+}
+
+.travel_point_title {
+	font-weight: 700;
+	font-size: 44px;
+	line-height: 120%;
+	color: #191825;
+	margin-bottom: 32px;
+}
+
+.travel_point_subText {
+	font-family: "Inter";
+	font-weight: 400;
+	font-size: 18px;
+	line-height: 160%;
+	color: rgba(25, 24, 37, 0.5);
+	margin-bottom: 64px;
+}
+
+.travel_point_cardsWrapper {
+	display: flex;
+	align-items: center;
+	justify-content: space-between;
+	flex-wrap: wrap;
+	gap: 32px;
+}
+
+.travel_point_card {
+	display: flex;
+	flex-direction: column;
+	align-items: center;
+	gap: 16px;
+	max-width: 204.5px;
+	width: 100%;
+	padding: 32px 0;
+	background: #ffffff;
+	border: 1px solid rgba(25, 24, 37, 0.1);
+	border-radius: 32px;
+	justify-content: center;
+}
+
+.travel_point_number {
+	font-weight: 700;
+	font-size: 35px;
+	line-height: 120%;
+	color: #ff5722;
+}
+
+.travel_point_card_title {
+	font-family: "Inter";
+	font-weight: 400;
+	font-size: 18px;
+	line-height: 160%;
+	color: #191825;
 }
 
 .description {
