--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -85,6 +85,7 @@ video {
 	font-size: 100%;
 	font: inherit;
 	vertical-align: baseline;
+	box-sizing: border-box;
 }
 
 article,
@@ -138,4 +139,23 @@ img {
 	display: block;
 	width: 100%;
 	height: auto;
+}
+
+input,
+button {
+	margin: 0;
+	padding: 0;
+	border: none;
+	background: none;
+	font: inherit;
+	color: inherit;
+	outline: none;
+	box-shadow: none;
+	appearance: none;
+	box-sizing: border-box;
+}
+
+input:focus,
+button:focus {
+	outline: none;
 }
