--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -105,6 +105,7 @@ section {
 body {
 	line-height: 1;
 	font-family: "Nunito Sans", sans-serif;
+	overflow-x: hidden;
 }
 
 ol,
@@ -158,4 +159,14 @@ button {
 input:focus,
 button:focus {
 	outline: none;
+}
+
+.swiper-slide-prev {
+	box-shadow: none !important;
+}
+
+.swiper-slide-active,
+.swiper-slide-next {
+	background: #ffffff;
+	box-shadow: 0px 41px 89px rgba(0, 0, 0, 0.1), 0px 0px 0px rgba(0, 0, 0, 0.1);
 }
