--- a/src/app/page.module.css
+++ b/src/app/page.module.css
@@ -483,7 +483,7 @@ header .wrapper {
 .services_slider {
 	width: 100%;
 	height: 100%;
-	padding: 64px 30px 109px 22% !important;
+	padding: 64px 30px 109px 0 !important;
 }
 
 .services_slider.prevSlide {
@@ -491,13 +491,15 @@ header .wrapper {
 }
 
 .services_card {
-	width: 350px !important;
-	height: 443px !important;
+	/* width: 350px !important;
+	height: 443px !important; */
 	display: flex !important;
 	flex-direction: column;
 	justify-content: center;
 	align-items: center;
 	border-radius: 32px;
+	padding: 64px 0 98px 0;
+	height: unset !important;
 }
 
 .services_icon {
@@ -849,123 +851,8 @@ header .wrapper {
 	align-items: center;
 }
 
-.description {
-	display: inherit;
-	justify-content: inherit;
-	align-items: inherit;
-	font-size: 0.85rem;
-	max-width: var(--max-width);
-	width: 100%;
-	z-index: 2;
-	font-family: var(--font-mono);
-}
-
-.description a {
-	display: flex;
-	justify-content: center;
-	align-items: center;
-	gap: 0.5rem;
-}
-
-.description p {
-	position: relative;
-	margin: 0;
-	padding: 1rem;
-	background-color: rgba(var(--callout-rgb), 0.5);
-	border: 1px solid rgba(var(--callout-border-rgb), 0.3);
-	border-radius: var(--border-radius);
-}
-
-.code {
-	font-weight: 700;
-	font-family: var(--font-mono);
-}
-
-.grid {
-	display: grid;
-	grid-template-columns: repeat(4, minmax(25%, auto));
-	max-width: 100%;
-	width: var(--max-width);
-}
-
-.card {
-	padding: 1rem 1.2rem;
-	border-radius: var(--border-radius);
-	background: rgba(var(--card-rgb), 0);
-	border: 1px solid rgba(var(--card-border-rgb), 0);
-	transition: background 200ms, border 200ms;
-}
-
-.card span {
-	display: inline-block;
-	transition: transform 200ms;
-}
-
-.card h2 {
-	font-weight: 600;
-	margin-bottom: 0.7rem;
-}
-
-.card p {
-	margin: 0;
-	opacity: 0.6;
-	font-size: 0.9rem;
-	line-height: 1.5;
-	max-width: 30ch;
-	text-wrap: balance;
-}
-
-.center {
-	display: flex;
-	justify-content: center;
-	align-items: center;
-	position: relative;
-	padding: 4rem 0;
-}
-
-.center::before {
-	background: var(--secondary-glow);
-	border-radius: 50%;
-	width: 480px;
-	height: 360px;
-	margin-left: -400px;
-}
-
-.center::after {
-	background: var(--primary-glow);
-	width: 240px;
-	height: 180px;
-	z-index: -1;
-}
-
-.center::before,
-.center::after {
-	content: "";
-	left: 50%;
-	position: absolute;
-	filter: blur(45px);
-	transform: translateZ(0);
-}
-
 .logo {
 	position: relative;
-}
-/* Enable hover only on non-touch devices */
-@media (hover: hover) and (pointer: fine) {
-	.card:hover {
-		background: rgba(var(--card-rgb), 0.1);
-		border: 1px solid rgba(var(--card-border-rgb), 0.15);
-	}
-
-	.card:hover span {
-		transform: translateX(4px);
-	}
-}
-
-@media (prefers-reduced-motion) {
-	.card:hover span {
-		transform: none;
-	}
 }
 
 @media (max-width: 1290px) {
@@ -1024,6 +911,19 @@ header .wrapper {
 	.travel_point_wrapper::before {
 		top: 209.2px;
 		height: 313.8px;
+	}
+
+	.card_title {
+		font-size: 23px;
+		margin-bottom: 20px;
+	}
+
+	.card_subtitle {
+		font-size: 16px;
+	}
+
+	.services_card {
+		padding: 40px 20px;
 	}
 }
 
@@ -1181,7 +1081,9 @@ header .wrapper {
 		padding-bottom: 40px;
 	}
 }
+
 /* Mobile */
+
 @media (max-width: 880px) {
 	.client_images_list {
 		max-width: 100px;
@@ -1199,6 +1101,11 @@ header .wrapper {
 @media (max-width: 690px) {
 	.client_wrapper {
 		margin-top: 0;
+	}
+
+	.services_icon {
+		max-width: 40px;
+		margin-bottom: 30px;
 	}
 
 	.client_list {
@@ -1291,6 +1198,17 @@ header .wrapper {
 		font-size: 25px;
 	}
 
+	.services_icon {
+		max-width: 30px;
+		margin-bottom: 20px;
+	}
+
+	.services_card {
+		width: auto !important;
+		height: unset !important;
+		padding: 20px;
+	}
+
 	.card_title {
 		font-size: 18px;
 		margin-bottom: 20px;
@@ -1351,28 +1269,32 @@ header .wrapper {
 	}
 }
 
-/* Tablet and Smaller Desktop */
-@media (min-width: 701px) and (max-width: 1120px) {
-	.grid {
-		grid-template-columns: repeat(2, 50%);
+@media screen and (min-width: 640px) {
+	.swiper-container {
+		width: 640px;
 	}
 }
 
-@media (prefers-color-scheme: dark) {
-	.vercelLogo {
-		filter: invert(1);
-	}
-
-	.logo {
-		filter: invert(1) drop-shadow(0 0 0.3rem #ffffff70);
+@media screen and (min-width: 768px) {
+	.swiper-container {
+		width: 768px;
 	}
 }
 
-@keyframes rotate {
-	from {
-		transform: rotate(360deg);
+@media screen and (min-width: 1024px) {
+	.swiper-container {
+		width: 768px;
 	}
-	to {
-		transform: rotate(0deg);
+}
+
+@media screen and (min-width: 1024px) {
+	.swiper-container {
+		width: 768px;
+	}
+}
+
+@media screen and (min-width: 1920px) {
+	.swiper-container {
+		width: 1920;
 	}
 }
